[package]
name = "base64check"
version = "0.1.0"
authors = ["Stephen Battista <stephen.battista@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.1.2"
rand = "0.8.4"
tokio = { version = "1.13.0", features = ["full"] } 